all tabs work, all edit buttons work, all tasks work, styled everything and added a settings button

--- a/src/components/buttons/buttons.css
+++ b/src/components/buttons/buttons.css
@@ -29,6 +29,14 @@
 #edit-specific-tab-button {
     z-index: 100;
     margin-top: 0;
+}
 
+#add-tab-button {
+    justify-content: center;
+    align-items: center;
+}
 
+#open-settings-button {
+    justify-content: left;
+    align-items: left;
 }
