--- a/src/assets/styles/chakraStylesReset.css
+++ b/src/assets/styles/chakraStylesReset.css
@@ -1,1 +1,3 @@
-@import "@chakra-ui/css-reset";
+version https://git-lfs.github.com/spec/v1
+oid sha256:17b36d5523168aa997e1182340621a5556b6906126b3d12b703acc0d9bb459a7
+size 32
