--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,10 +1,3 @@
-/* #header { */
-    /* background-color: #fff;
-    border-bottom: 1px solid #e6e6e6;
-    height: 60px;
-    line-height: 60px;
-    position: fixed;
-    top: 0;
-    width: 100%; */
-    /* z-index: 100; */
-/* } */
+version https://git-lfs.github.com/spec/v1
+oid sha256:2a0ef435fdf8e4e08fd097748b4d405115d97f222d533a30d080151a756950f6
+size 203
