--- a/src/components/notes/notesContainer.css
+++ b/src/components/notes/notesContainer.css
@@ -1,8 +1,8 @@
 .container {
   background-color: #ffffe0;
   border: 1px solid #000;
-  height: 100%;
-  width: 100%;
+  /* height: 100%; */
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
